mm/mm/mm.output
Grammar

    0 $accept: program $end

    1 program: transformationList

    2 transformationList: transformationList transformation
    3                   | /* empty */

    4 transformation: elementList MODIFY
    5               | elementList STEP

    6 elementList: elementList element
    7            | /* empty */

    8 element: io when act how SOURCE name of
    9        | io when act how DRAIN name of
   10        | io when act how GATE name of
   11        | io when act how POOL name of at max add
   12        | io when act how CONVERTER name from to
   13        | io REF name
   14        | name name
   15        | name DOT exp DOT_GT name
   16        | name SUB exp SUB_GT name
   17        | name LCURLY elementList RCURLY
   18        | ASSERT name COLON exp STRING
   19        | DELETE name
   20        | ACTIVATE name
   21        | VIOLATE name
   22        | FAIL name
   23        | PREVENT name
   24        | DISABLE name
   25        | ENABLE name
   26        | TRIGGER name

   27 io: PRIVATE
   28   | IN
   29   | OUT
   30   | INOUT
   31   | /* empty */

   32 when: PASSIVE
   33     | AUTO
   34     | USER
   35     | START
   36     | /* empty */

   37 act: PULL
   38    | PUSH
   39    | /* empty */

   40 how: ANY
   41    | ALL
   42    | /* empty */

   43 at: AT FPVAL
   44   | /* empty */

   45 max: MAX FPVAL
   46    | /* empty */

   47 add: ADDITION LPAREN exp RPAREN
   48    | /* empty */

   49 of: OF name
   50   | /* empty */

   51 from: FROM name
   52     | /* empty */

   53 to: TO name
   54   | /* empty */

   55 exp: exp AND exp
   56    | exp OR exp
   57    | exp GT exp
   58    | exp GE exp
   59    | exp LT exp
   60    | exp LE exp
   61    | exp NE exp
   62    | exp EQ exp
   63    | exp ADD exp
   64    | exp SUB exp
   65    | exp MUL exp
   66    | exp DIV exp
   67    | UNM exp
   68    | NOT exp
   69    | exp PERCENT
   70    | FPVAL PER FPVAL
   71    | LPAREN exp RPAREN
   72    | FPVAL RANGE FPVAL
   73    | FPVAL DICE
   74    | FPVAL
   75    | TRUE
   76    | FALSE
   77    | ALL
   78    | ACTIVE name
   79    | ALIAS
   80    | name
   81    | /* empty */

   82 name: ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 82
PRIVATE (259) 27
IN (260) 28
OUT (261) 29
INOUT (262) 30
PASSIVE (263) 32
AUTO (264) 33
USER (265) 34
START (266) 35
PUSH (267) 38
PULL (268) 37
ALL (269) 41 77
ANY (270) 40
FROM (271) 51
TO (272) 53
OF (273) 49
EQ (274) 62
NE (275) 61
LT (276) 59
GT (277) 57
LE (278) 60
GE (279) 58
AND (280) 55
OR (281) 56
NOT (282) 68
TRUE (283) 75
FALSE (284) 76
ACTIVE (285) 78
ASSERT (286) 18
DELETE (287) 19
ACTIVATE (288) 20
DISABLE (289) 24
ENABLE (290) 25
PREVENT (291) 23
TRIGGER (292) 26
FAIL (293) 22
VIOLATE (294) 21
MODIFY (295) 4
STEP (296) 5
AT (297) 43
MAX (298) 45
DICE (299) 73
ALIAS (300) 79
DOT (301) 15
PER (302) 70
REF (303) 13
DOT_GT (304) 15
SUB_GT (305) 16
LCURLY (306) 17
RCURLY (307) 17
COLON (308) 18
RANGE (309) 72
PERCENT (310) 69
SOURCE (311) 8
DRAIN (312) 9
POOL (313) 11
GATE (314) 10
CONVERTER (315) 12
SUB (316) 16 64
ADD (317) 63
MUL (318) 65
DIV (319) 66
FPVAL (320) 43 45 70 72 73 74
STRING (321) 18
ADDITION (322) 47
UNM (323) 67
RPAREN (324) 47 71
LPAREN (325) 47 71


Nonterminals, with rules where they appear

$accept (71)
    on left: 0
program (72)
    on left: 1, on right: 0
transformationList (73)
    on left: 2 3, on right: 1 2
transformation (74)
    on left: 4 5, on right: 2
elementList (75)
    on left: 6 7, on right: 4 5 6 17
element (76)
    on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26,
    on right: 6
io (77)
    on left: 27 28 29 30 31, on right: 8 9 10 11 12 13
when (78)
    on left: 32 33 34 35 36, on right: 8 9 10 11 12
act (79)
    on left: 37 38 39, on right: 8 9 10 11 12
how (80)
    on left: 40 41 42, on right: 8 9 10 11 12
at (81)
    on left: 43 44, on right: 11
max (82)
    on left: 45 46, on right: 11
add (83)
    on left: 47 48, on right: 11
of (84)
    on left: 49 50, on right: 8 9 10 11
from (85)
    on left: 51 52, on right: 12
to (86)
    on left: 53 54, on right: 12
exp (87)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81, on right: 15 16 18 47 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69 71
name (88)
    on left: 82, on right: 8 9 10 11 12 13 14 15 16 17 18 19 20 21
    22 23 24 25 26 49 51 53 78 80


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (transformationList)

    program             go to state 1
    transformationList  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: transformationList .
    2 transformationList: transformationList . transformation

    $end      reduce using rule 1 (program)
    $default  reduce using rule 7 (elementList)

    transformation  go to state 4
    elementList     go to state 5


state 3

    0 $accept: program $end .

    $default  accept


state 4

    2 transformationList: transformationList transformation .

    $default  reduce using rule 2 (transformationList)


state 5

    4 transformation: elementList . MODIFY
    5               | elementList . STEP
    6 elementList: elementList . element

    ID        shift, and go to state 6
    PRIVATE   shift, and go to state 7
    IN        shift, and go to state 8
    OUT       shift, and go to state 9
    INOUT     shift, and go to state 10
    ASSERT    shift, and go to state 11
    DELETE    shift, and go to state 12
    ACTIVATE  shift, and go to state 13
    DISABLE   shift, and go to state 14
    ENABLE    shift, and go to state 15
    PREVENT   shift, and go to state 16
    TRIGGER   shift, and go to state 17
    FAIL      shift, and go to state 18
    VIOLATE   shift, and go to state 19
    MODIFY    shift, and go to state 20
    STEP      shift, and go to state 21

    $default  reduce using rule 31 (io)

    element  go to state 22
    io       go to state 23
    name     go to state 24


state 6

   82 name: ID .

    $default  reduce using rule 82 (name)


state 7

   27 io: PRIVATE .

    $default  reduce using rule 27 (io)


state 8

   28 io: IN .

    $default  reduce using rule 28 (io)


state 9

   29 io: OUT .

    $default  reduce using rule 29 (io)


state 10

   30 io: INOUT .

    $default  reduce using rule 30 (io)


state 11

   18 element: ASSERT . name COLON exp STRING

    ID  shift, and go to state 6

    name  go to state 25


state 12

   19 element: DELETE . name

    ID  shift, and go to state 6

    name  go to state 26


state 13

   20 element: ACTIVATE . name

    ID  shift, and go to state 6

    name  go to state 27


state 14

   24 element: DISABLE . name

    ID  shift, and go to state 6

    name  go to state 28


state 15

   25 element: ENABLE . name

    ID  shift, and go to state 6

    name  go to state 29


state 16

   23 element: PREVENT . name

    ID  shift, and go to state 6

    name  go to state 30


state 17

   26 element: TRIGGER . name

    ID  shift, and go to state 6

    name  go to state 31


state 18

   22 element: FAIL . name

    ID  shift, and go to state 6

    name  go to state 32


state 19

   21 element: VIOLATE . name

    ID  shift, and go to state 6

    name  go to state 33


state 20

    4 transformation: elementList MODIFY .

    $default  reduce using rule 4 (transformation)


state 21

    5 transformation: elementList STEP .

    $default  reduce using rule 5 (transformation)


state 22

    6 elementList: elementList element .

    $default  reduce using rule 6 (elementList)


state 23

    8 element: io . when act how SOURCE name of
    9        | io . when act how DRAIN name of
   10        | io . when act how GATE name of
   11        | io . when act how POOL name of at max add
   12        | io . when act how CONVERTER name from to
   13        | io . REF name

    PASSIVE  shift, and go to state 34
    AUTO     shift, and go to state 35
    USER     shift, and go to state 36
    START    shift, and go to state 37
    REF      shift, and go to state 38

    $default  reduce using rule 36 (when)

    when  go to state 39


state 24

   14 element: name . name
   15        | name . DOT exp DOT_GT name
   16        | name . SUB exp SUB_GT name
   17        | name . LCURLY elementList RCURLY

    ID      shift, and go to state 6
    DOT     shift, and go to state 40
    LCURLY  shift, and go to state 41
    SUB     shift, and go to state 42

    name  go to state 43


state 25

   18 element: ASSERT name . COLON exp STRING

    COLON  shift, and go to state 44


state 26

   19 element: DELETE name .

    $default  reduce using rule 19 (element)


state 27

   20 element: ACTIVATE name .

    $default  reduce using rule 20 (element)


state 28

   24 element: DISABLE name .

    $default  reduce using rule 24 (element)


state 29

   25 element: ENABLE name .

    $default  reduce using rule 25 (element)


state 30

   23 element: PREVENT name .

    $default  reduce using rule 23 (element)


state 31

   26 element: TRIGGER name .

    $default  reduce using rule 26 (element)


state 32

   22 element: FAIL name .

    $default  reduce using rule 22 (element)


state 33

   21 element: VIOLATE name .

    $default  reduce using rule 21 (element)


state 34

   32 when: PASSIVE .

    $default  reduce using rule 32 (when)


state 35

   33 when: AUTO .

    $default  reduce using rule 33 (when)


state 36

   34 when: USER .

    $default  reduce using rule 34 (when)


state 37

   35 when: START .

    $default  reduce using rule 35 (when)


state 38

   13 element: io REF . name

    ID  shift, and go to state 6

    name  go to state 45


state 39

    8 element: io when . act how SOURCE name of
    9        | io when . act how DRAIN name of
   10        | io when . act how GATE name of
   11        | io when . act how POOL name of at max add
   12        | io when . act how CONVERTER name from to

    PUSH  shift, and go to state 46
    PULL  shift, and go to state 47

    $default  reduce using rule 39 (act)

    act  go to state 48


state 40

   15 element: name DOT . exp DOT_GT name

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 58
    name  go to state 59


state 41

   17 element: name LCURLY . elementList RCURLY

    $default  reduce using rule 7 (elementList)

    elementList  go to state 60


state 42

   16 element: name SUB . exp SUB_GT name

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 61
    name  go to state 59


state 43

   14 element: name name .

    $default  reduce using rule 14 (element)


state 44

   18 element: ASSERT name COLON . exp STRING

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 62
    name  go to state 59


state 45

   13 element: io REF name .

    $default  reduce using rule 13 (element)


state 46

   38 act: PUSH .

    $default  reduce using rule 38 (act)


state 47

   37 act: PULL .

    $default  reduce using rule 37 (act)


state 48

    8 element: io when act . how SOURCE name of
    9        | io when act . how DRAIN name of
   10        | io when act . how GATE name of
   11        | io when act . how POOL name of at max add
   12        | io when act . how CONVERTER name from to

    ALL  shift, and go to state 63
    ANY  shift, and go to state 64

    $default  reduce using rule 42 (how)

    how  go to state 65


state 49

   77 exp: ALL .

    $default  reduce using rule 77 (exp)


state 50

   68 exp: NOT . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 66
    name  go to state 59


state 51

   75 exp: TRUE .

    $default  reduce using rule 75 (exp)


state 52

   76 exp: FALSE .

    $default  reduce using rule 76 (exp)


state 53

   78 exp: ACTIVE . name

    ID  shift, and go to state 6

    name  go to state 67


state 54

   79 exp: ALIAS .

    $default  reduce using rule 79 (exp)


state 55

   70 exp: FPVAL . PER FPVAL
   72    | FPVAL . RANGE FPVAL
   73    | FPVAL . DICE
   74    | FPVAL .

    DICE   shift, and go to state 68
    PER    shift, and go to state 69
    RANGE  shift, and go to state 70

    $default  reduce using rule 74 (exp)


state 56

   67 exp: UNM . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 71
    name  go to state 59


state 57

   71 exp: LPAREN . exp RPAREN

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 72
    name  go to state 59


state 58

   15 element: name DOT exp . DOT_GT name
   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    EQ       shift, and go to state 73
    NE       shift, and go to state 74
    LT       shift, and go to state 75
    GT       shift, and go to state 76
    LE       shift, and go to state 77
    GE       shift, and go to state 78
    AND      shift, and go to state 79
    OR       shift, and go to state 80
    DOT_GT   shift, and go to state 81
    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86


state 59

   80 exp: name .

    $default  reduce using rule 80 (exp)


state 60

    6 elementList: elementList . element
   17 element: name LCURLY elementList . RCURLY

    ID        shift, and go to state 6
    PRIVATE   shift, and go to state 7
    IN        shift, and go to state 8
    OUT       shift, and go to state 9
    INOUT     shift, and go to state 10
    ASSERT    shift, and go to state 11
    DELETE    shift, and go to state 12
    ACTIVATE  shift, and go to state 13
    DISABLE   shift, and go to state 14
    ENABLE    shift, and go to state 15
    PREVENT   shift, and go to state 16
    TRIGGER   shift, and go to state 17
    FAIL      shift, and go to state 18
    VIOLATE   shift, and go to state 19
    RCURLY    shift, and go to state 87

    $default  reduce using rule 31 (io)

    element  go to state 22
    io       go to state 23
    name     go to state 24


state 61

   16 element: name SUB exp . SUB_GT name
   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    EQ       shift, and go to state 73
    NE       shift, and go to state 74
    LT       shift, and go to state 75
    GT       shift, and go to state 76
    LE       shift, and go to state 77
    GE       shift, and go to state 78
    AND      shift, and go to state 79
    OR       shift, and go to state 80
    SUB_GT   shift, and go to state 88
    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86


state 62

   18 element: ASSERT name COLON exp . STRING
   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    EQ       shift, and go to state 73
    NE       shift, and go to state 74
    LT       shift, and go to state 75
    GT       shift, and go to state 76
    LE       shift, and go to state 77
    GE       shift, and go to state 78
    AND      shift, and go to state 79
    OR       shift, and go to state 80
    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86
    STRING   shift, and go to state 89


state 63

   41 how: ALL .

    $default  reduce using rule 41 (how)


state 64

   40 how: ANY .

    $default  reduce using rule 40 (how)


state 65

    8 element: io when act how . SOURCE name of
    9        | io when act how . DRAIN name of
   10        | io when act how . GATE name of
   11        | io when act how . POOL name of at max add
   12        | io when act how . CONVERTER name from to

    SOURCE     shift, and go to state 90
    DRAIN      shift, and go to state 91
    POOL       shift, and go to state 92
    GATE       shift, and go to state 93
    CONVERTER  shift, and go to state 94


state 66

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   68    | NOT exp .
   69    | exp . PERCENT

    $default  reduce using rule 68 (exp)


state 67

   78 exp: ACTIVE name .

    $default  reduce using rule 78 (exp)


state 68

   73 exp: FPVAL DICE .

    $default  reduce using rule 73 (exp)


state 69

   70 exp: FPVAL PER . FPVAL

    FPVAL  shift, and go to state 95


state 70

   72 exp: FPVAL RANGE . FPVAL

    FPVAL  shift, and go to state 96


state 71

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   67    | UNM exp .
   69    | exp . PERCENT

    $default  reduce using rule 67 (exp)


state 72

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT
   71    | LPAREN exp . RPAREN

    EQ       shift, and go to state 73
    NE       shift, and go to state 74
    LT       shift, and go to state 75
    GT       shift, and go to state 76
    LE       shift, and go to state 77
    GE       shift, and go to state 78
    AND      shift, and go to state 79
    OR       shift, and go to state 80
    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86
    RPAREN   shift, and go to state 97


state 73

   62 exp: exp EQ . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 98
    name  go to state 59


state 74

   61 exp: exp NE . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 99
    name  go to state 59


state 75

   59 exp: exp LT . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 100
    name  go to state 59


state 76

   57 exp: exp GT . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 101
    name  go to state 59


state 77

   60 exp: exp LE . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 102
    name  go to state 59


state 78

   58 exp: exp GE . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 103
    name  go to state 59


state 79

   55 exp: exp AND . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 104
    name  go to state 59


state 80

   56 exp: exp OR . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 105
    name  go to state 59


state 81

   15 element: name DOT exp DOT_GT . name

    ID  shift, and go to state 6

    name  go to state 106


state 82

   69 exp: exp PERCENT .

    $default  reduce using rule 69 (exp)


state 83

   64 exp: exp SUB . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 107
    name  go to state 59


state 84

   63 exp: exp ADD . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 108
    name  go to state 59


state 85

   65 exp: exp MUL . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 109
    name  go to state 59


state 86

   66 exp: exp DIV . exp

    ID      shift, and go to state 6
    ALL     shift, and go to state 49
    NOT     shift, and go to state 50
    TRUE    shift, and go to state 51
    FALSE   shift, and go to state 52
    ACTIVE  shift, and go to state 53
    ALIAS   shift, and go to state 54
    FPVAL   shift, and go to state 55
    UNM     shift, and go to state 56
    LPAREN  shift, and go to state 57

    $default  reduce using rule 81 (exp)

    exp   go to state 110
    name  go to state 59


state 87

   17 element: name LCURLY elementList RCURLY .

    $default  reduce using rule 17 (element)


state 88

   16 element: name SUB exp SUB_GT . name

    ID  shift, and go to state 6

    name  go to state 111


state 89

   18 element: ASSERT name COLON exp STRING .

    $default  reduce using rule 18 (element)


state 90

    8 element: io when act how SOURCE . name of

    ID  shift, and go to state 6

    name  go to state 112


state 91

    9 element: io when act how DRAIN . name of

    ID  shift, and go to state 6

    name  go to state 113


state 92

   11 element: io when act how POOL . name of at max add

    ID  shift, and go to state 6

    name  go to state 114


state 93

   10 element: io when act how GATE . name of

    ID  shift, and go to state 6

    name  go to state 115


state 94

   12 element: io when act how CONVERTER . name from to

    ID  shift, and go to state 6

    name  go to state 116


state 95

   70 exp: FPVAL PER FPVAL .

    $default  reduce using rule 70 (exp)


state 96

   72 exp: FPVAL RANGE FPVAL .

    $default  reduce using rule 72 (exp)


state 97

   71 exp: LPAREN exp RPAREN .

    $default  reduce using rule 71 (exp)


state 98

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   62    | exp EQ exp .
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 62 (exp)


state 99

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   61    | exp NE exp .
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 61 (exp)


state 100

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   59    | exp LT exp .
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 59 (exp)


state 101

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   57    | exp GT exp .
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 57 (exp)


state 102

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   60    | exp LE exp .
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 60 (exp)


state 103

   55 exp: exp . AND exp
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   58    | exp GE exp .
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 58 (exp)


state 104

   55 exp: exp . AND exp
   55    | exp AND exp .
   56    | exp . OR exp
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    EQ       shift, and go to state 73
    NE       shift, and go to state 74
    LT       shift, and go to state 75
    GT       shift, and go to state 76
    LE       shift, and go to state 77
    GE       shift, and go to state 78
    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 55 (exp)


state 105

   55 exp: exp . AND exp
   56    | exp . OR exp
   56    | exp OR exp .
   57    | exp . GT exp
   58    | exp . GE exp
   59    | exp . LT exp
   60    | exp . LE exp
   61    | exp . NE exp
   62    | exp . EQ exp
   63    | exp . ADD exp
   64    | exp . SUB exp
   65    | exp . MUL exp
   66    | exp . DIV exp
   69    | exp . PERCENT

    EQ       shift, and go to state 73
    NE       shift, and go to state 74
    LT       shift, and go to state 75
    GT       shift, and go to state 76
    LE       shift, and go to state 77
    GE       shift, and go to state 78
    PERCENT  shift, and go to state 82
    SUB      shift, and go to state 83
    ADD      shift, and go to state 84
    MUL      shift, and go to state 85
    DIV      shift, and go to state 86

    $default  reduce using rule 56 (exp)


state 106

   15 element: name DOT exp DOT_GT name .

    $default  reduce using rule 15 (element)

